# fastapi-explosion-extras

./: README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg
fastapi_explosion_extras/: __init__.py  pagination.py  routing.py
fastapi_explosion_extras/tests/: api.py  test_init_app.py  test_router.py
fastapi_extras/: __init__.py  initialize.py  router.py  routing.py
scripts/: format.sh  lint.sh  push-tag.sh  test.sh
tests/: __init__.py  api.py  app.py  test_init_app.py  test_router.py
