[tool.poetry]
name = "fastapi-extras"
version = "0.1.3"
description = ""
authors = ["Kabir <kabir@explosion.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
fastapi = ">=0.70.1, <1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"
uvicorn = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
